Refactor HTML structure and styling for controls

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -10,7 +10,7 @@
       background-color: #f4f4f9;
       color: #333;
       text-align: center;
-      margin-top: 50px;
+      margin-top: 40px;
     }
 
     #quoteDisplay {
@@ -42,21 +42,40 @@
     button:hover {
       background-color: #0056b3;
     }
+
+    #controls {
+      margin-top: 15px;
+    }
+
+    #importExport {
+      margin-top: 20px;
+    }
+
+    #message {
+      margin-top: 10px;
+      min-height: 18px;
+    }
   </style>
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
-  
+
   <!-- Quote Display Area -->
   <div id="quoteDisplay"></div>
-  <button id="newQuote">Show New Quote</button>
 
-  <!-- Dynamic Form for Adding Quotes -->
-  <div>
-    <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-    <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-    <button id="addQuote">Add Quote</button>
+  <div id="controls">
+    <button id="newQuote">Show New Quote</button>
+    <button id="showAll">Show All Quotes</button>
   </div>
+
+  <!-- Import / Export -->
+  <div id="importExport">
+    <input type="file" id="importFile" accept=".json" />
+    <button id="importBtn">Import Quotes</button>
+    <button id="exportBtn">Export Quotes</button>
+  </div>
+
+  <div id="message"></div>
 
   <script src="script.js"></script>
 </body>
