--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -60,6 +60,12 @@
 <body>
   <h1>Dynamic Quote Generator</h1>
 
+  <!-- Notification area -->
+<div id="notificationArea"></div>
+
+<!-- Existing elements (filter, quoteDisplay, form...) stay the same -->
+
+
   <!-- Category Filter -->
   <select id="categoryFilter" onchange="filterQuotes()">
     <option value="all">All Categories</option>
